# saar

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml  saar.tape  saar_demo.tape
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-release.yml  ci.yml  publish.yml
benchmark/: benchmark.py  benchmark_multi.py  benchmark_report.md  benchmark_results.json
docs/: generate_pdf.py  rl_technical_report.html  rl_technical_report.md  saar-add.tape  saar-demo.tape  saar-diff.tape
experiments/: __init__.py  eval_comparison.py  train_reinforce.py  train_ucb.py
experiments/results/: comparison.json
saar/: __init__.py  capture.py  cli.py  deep_extractor.py  dependency_analyzer.py  differ.py  enricher.py  extractor.py  init_wizard.py  interview.py  interview_questions.py  linter.py  models.py  oci_client.py  scorer.py  style_analyzer.py
saar/commands/: explore.py  extract.py  maintain.py  quality.py  rl_commands.py
saar/extractors/: backend.py  conventions.py  frontend.py  project.py
saar/formatters/: __init__.py  _tribal.py  agents_md.py  budget.py  claude_md.py  copilot.py  cursor_mdc.py  cursorrules.py  markdown.py
saar/rl/: __init__.py  action_space.py  environment.py  policy_store.py  reward.py  simulator.py  state_encoder.py
saar/rl/agents/: __init__.py  ensemble.py  reinforce.py  ucb_bandit.py
tests/: conftest.py  test_budget.py  test_canonical_examples.py  test_capture.py  test_check.py  test_cli.py  test_deep_extractor.py  test_dependency_analyzer.py  test_differ.py  test_enricher.py  test_extractor.py  test_extractor_determinism.py  test_formatters.py  test_frontend_detector.py  test_interview.py  test_interview_questions.py  test_lint.py  test_new_commands.py  test_oci_client.py  test_style_analyzer.py
tests/test_rl/: test_action_space.py  test_ensemble.py  test_environment.py  test_policy_store.py  test_reinforce.py  test_reward.py  test_simulator.py  test_state_encoder.py  test_ucb_bandit.py
web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vercel.json
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  DocsPage.tsx  index.css  main.tsx
