[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saar"
version = "0.1.0"
description = "Extract the essence of your codebase. Auto-generate CLAUDE.md, .cursorrules, and copilot-instructions.md."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenCodeIntel", email = "dev@getsaar.com" },
]
keywords = [
    "ai", "codebase", "static-analysis", "claude", "cursor",
    "copilot", "code-intelligence", "tree-sitter", "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
saar = "saar.cli:app"

[project.urls]
Homepage = "https://getsaar.com"
Repository = "https://github.com/OpenCodeIntel/saar"
Issues = "https://github.com/OpenCodeIntel/saar/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
